styles.css
body, html {
    height: 100%;
    padding: 0;
    margin: 0;
  }



#container{
    height: 100%;
    display: grid;
    grid-template-columns: 2fr 8fr;
    grid-template-rows: 1fr 4fr;
}

#sidebar{
    grid-column: 1/2;
    grid-row: 1/3;
    background-color: #0093d0;
    color: white;
}

#header{
    box-sizing: border-box;
    padding: 10px 10px 0px 50px;
    display: grid;
    background-color: #ffffff;
    grid-template-rows: 1fr 2fr;
    grid-template-columns: 1000px 100px 25px 45px 90px 1fr;
    align-items: center;
}

.search{
    box-sizing: border-box;
    background-color: #e1e8ef;
    border: none;
    padding: 5px;
}

#ringer{
    grid-column: 3/4;
}

.profile-wrapper{
    width: 50px;
    height: 50px;
    border-radius: 100%; 
    overflow: hidden; 
    display: flex; 
    align-items: center; 
    justify-content: center;
    grid-column: 5/6; 
}

.user{
    display: grid;
    grid-template-columns: 1fr 8fr;
    grid-template-rows: 1fr 3fr;
}

.user .profile-wrapper{
    grid-row: 1/3;
    grid-column: 1/2;
    width: 75px;
    height: 75px;
    border-radius: 100%; 
    overflow: hidden; 
    display: flex; 
    align-items: center; 
    justify-content: center;
}

.user-text{
    display: flex;
    align-items: center;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

.profile-pic { 
    width: 100%; 
    height: 100%; 
    object-fit: cover; 
}

.user-name{
    color: black;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

#search-bar{
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
    height: 40px;
    column-gap: 8px;
}

button {
    background: none;
    border: none;
    padding: 0;
    margin: 0;
    font: inherit;
    color: inherit;
    cursor: pointer;
  }
  
  

.button{
    height: 40px;
    background-color: #0093d0;
    width: 100px;
    border-radius: 20px;
    margin: 20px;
    color: white;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

.button-container{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}


#search{
    grid-row: 1/2;
}

#main{
    background-color:#e1e7f0 ;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr;
}

.project-container{
    display: grid;
    padding: 0px 10px 0px 20px;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 50px 1fr 1fr 1fr 50px;
    gap: 20px
}

.project-card{
    display: grid;
    background-color: white ;
    grid-template-columns: 6px 1fr;
    border-radius: 9px;
}

.announcement-card{
    margin: 20px 0px 0px 0px;
    font-size: smaller;
    grid-row: 2/3;
    display: grid;
    background-color: white;
    border-radius: 9px;
    padding: 20px;
}

.trending-card{
}

.project-text{
    padding: 10px 30px 50px 20px;
}

.yellow-line{
    background-color: #eeb32c;
    grid-row: 1/3;
    border-radius: 9px 0px 0px 9px;
}

.right-container{
    height: 100%;
    box-sizing: border-box;
    display: grid;
    padding: 0px 20px 0px 10px;
    grid-template-rows: 50px 1fr 50px 1fr 50px;
}

#navigation, #nav2{
    padding: 25px;
    display: grid;
    gap: 20px;
    grid-template-columns: 1fr 10fr;
    grid-template-rows: repeat(7,1fr);
    font-weight: bold;
}

li{
    list-style: none;
    grid-column: 2/3;
}

#branding{
    display: grid;
    grid-template-columns: 1fr 6fr;
    grid-template-rows: 2fr 1fr;
    font-size: 25px;
    font-weight: bold;
}

#brand-icon{
    height: 50px;
    padding: 15px;
}

#side-title{
    padding: 20px 0px;
}

.icon{
    height: 25px;
}

.icon-white{
filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(300deg) brightness(101%) contrast(105%);
}

.search{
    border-radius: 10px;
    margin: 10px;
}

